welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:3: error: missing parameter type
		if(!(n => 0 && n <= 11)) {
                     ^in1To10:3: error: value && is not a member of Int
		if(!(n => 0 && n <= 11)) {
                            ^